# google_map_crawler

./: .env  .gitignore  README.md  Taipei_Point_500m.geojson  Taipei_Point_500m_lat_lon.geojson  Taipei_building.sh  clean.py  create_boundary.py  dep.sh  get_points_from_polygon.sh  main.py  parking.py  parking_memo.csv  parking_memo_processed.csv  parking_name_ls.json  parking_test_processed.json  process_context_db_content.py  pyproject.toml  read_json.ipynb  requirements.txt  requirments.txt  setting.yaml  stage1.py  stage2.py  stage3.py  stage4.py  stage5.py  taipei.py  taipei_multiprocessing.py  taipei_test.py  taipei_v1.py  taipei_v2.py  taipei_v3.py  test.py  tmp.ipynb  tool.py
.ref/: tmp_cambridge4.py
.test/: cambridge4.py  old.main.py
data/: area.geojson  categories.json  taipei_book+store.json  taipei_night+club.json  taipei_park.json  taipei_parking.json  taipei_school.json  taipei_store.json  test_data.geojson
parking/: parking_memo.csv  parking_memo_processed.csv  parking_name_ls.json  parking_test.json  parking_test1.json  parking_test_processed.json
taipei/: airport.json  book+store.json  city+hall.json  library.json  night+club.json  park.json  parking.json  school.json  taipei_city+hall.json  taipei_gym.json  taipei_library.json  taipei_park.json  taipei_school.json  taipei_store.json  university.json  zoo.json
utils/: read_area_from_pg.ipynb
