[tool.poetry]
name = "google-map-crawler"
version = "0.1.0"
description = ""
authors = ["johnsonafool <johnsonafool@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.4"
selenium = "^4.16.0"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.4"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
